--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://css.gg/search.css' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+    <title>BookStore</title>
 </head>
 <body>
     <header class="barreRecherche">
@@ -21,7 +21,7 @@
                         L'histoire d'une vie de merde comme la mienne vois-tu
                     </p>
                 </li>
-                <li class="book1">
+                <li class="book2">
                     <img src="crimeChat.jpg" height="70" width="50" class="bookCover">
                     <p class="bookTitle"><span class="title">Crime et châtiment</span></br>
                         Ce con de russe est dans la merde
