--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://css.gg/search.css' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>BookStore</title>
+    <title>Document</title>
 </head>
 <body>
+    <script src="./jquery.min.js"></script>
+    <script src="app.js"></script>
     <header class="barreRecherche">
         <input type="text" id="search" name="name" class="searchBook" placeholder="Rechercher..." onclick="this.value='';">
         <i class="gg-search"></i>
