--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="./jquery.min.js"></script>
     <script src="app.js"></script>
     <header class="barreRecherche">
-        <input type="text" id="search" name="name" class="searchBook" placeholder="Rechercher..." onclick="this.value='';">
+        <input type="text" id="search" name="name" class="searchBook" placeholder="Rechercher...">
         <i class="gg-search"></i>
     </header>
     <main>
